# vm-play-server

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docker/executor/: Dockerfile  requirements.txt
src/aivenv/: __init__.py  cli.py  config.py  log_server.py  server.py
src/aivenv/execution/: __init__.py  code_generator.py  container.py  errors.py  manager.py  models.py
src/aivenv/logs/: __init__.py  log_buffer.py
src/aivenv/tunnel/: __init__.py  ngrok_manager.py
tests/: __init__.py
tests/integration/: __init__.py  test_run_flow.py  test_stop_flow.py
tests/unit/: __init__.py  test_cli.py  test_code_generator.py  test_config.py  test_container.py  test_log_buffer.py  test_log_server.py  test_models.py  test_ngrok_manager.py  test_server.py
