[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "aivenv"
version = "0.1.0"
description = "AI-driven virtual code execution environment."
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7,<9",
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.30.0,<1",
  "openai>=1.40.0,<2",
  "docker>=7.1.0,<8",
  "ngrok>=1.4.0,<2",
  "pydantic>=2.8.0,<3",
  "pydantic-settings>=2.4.0,<3",
  "python-dotenv>=1.0.1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.24.0,1",
  "pytest-cov>=5.0.0,<6",
  "mypy>=1.11.0,<2",
  "ruff>=0.6.0,<1",
  "coverage[toml]>=7.6.0,<8"
]

[project.scripts]
aivenv = "aivenv.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aivenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
