[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivenv"
version = "0.1.0"
description = "CLI-based virtual code execution environment."
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.51.0",
  "docker>=7.1.0",
  "ngrok>=1.4.0",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
aivenv = "aivenv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
